# crabitat

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  clippy.toml  mise.toml  rustfmt.toml  schema.sql  team.toml
.beads/: issues.jsonl
apps/crabitat-console/: astro.config.mjs  package-lock.json  package.json
apps/crabitat-console/src/components/: AddFlavorModal.astro  AddRepoModal.astro  AgentList.astro  ColonyGrid.astro  ContentHeader.astro  CrabGrid.astro  CreateMissionModal.astro  EmptyState.astro  FlavorDetailModal.astro  IssueCard.astro  IssueList.astro  IssueQueue.astro  LanguageBar.astro  LaunchMissionModal.astro  MessageLog.astro  MetricGrid.astro  MissionPipeline.astro  MissionTable.astro  NewMissionModal.astro  NewWorkflowModal.astro  PromptBrowser.astro  PromptTree.astro  RepoCard.astro  RepoList.astro  RoleEditModal.astro  RoleList.astro  RunTable.astro  SchemeToggle.astro  SearchToolbar.astro  Sidebar.astro  SkillList.astro  StepPipeline.astro  TaskTable.astro  ThemeToggle.astro  WorkflowCard.astro  WorkflowList.astro
apps/crabitat-console/src/layouts/: Layout.astro
apps/crabitat-console/src/lib/: api-client.ts  api-utils.ts  format.ts  mock-data.ts  status-store.ts  types.ts  utils.ts
apps/crabitat-console/src/pages/: agents.astro  index.astro  issues.astro  messages.astro  missions.astro  prompts.astro  roles.astro  settings.astro  workflows.astro
apps/crabitat-console/src/pages/api/: missions.ts  repos.ts  roles.ts  settings.ts  skills.ts  stacks.ts  workflows.ts
apps/crabitat-console/src/pages/api/colonies/: index.ts
apps/crabitat-console/src/pages/api/colonies/[colony_id]/: issues.ts  queue.ts
apps/crabitat-console/src/pages/api/fs/: browse.ts
apps/crabitat-console/src/pages/api/github/: repos.ts
apps/crabitat-console/src/pages/api/prompt-files/: index.ts  preview.ts
apps/crabitat-console/src/pages/api/repos/: create.ts
apps/crabitat-console/src/pages/api/repos/[repo_id]/: delete.ts  index.ts  issues.ts  languages.ts  queue.ts
apps/crabitat-console/src/pages/api/roles/: [role_id].ts
apps/crabitat-console/src/pages/api/workflows/: create.ts  sync.ts
apps/crabitat-console/src/pages/api/workflows/[workflow_id]/: delete.ts
apps/crabitat-console/src/pages/api/workflows/[workflow_id]/flavors/: create.ts
apps/crabitat-console/src/pages/issues/: [repo_id].astro  index.astro
apps/crabitat-console/src/pages/missions/: [id].astro  index.astro
apps/crabitat-console/src/pages/repos/: index.astro
apps/crabitat-console/src/pages/repos/[owner]/: [name].astro
apps/crabitat-console/src/pages/workflows/: index.astro
apps/crabitat-console/src/scripts/: modal.ts  nav.ts  queue.ts  render.ts  search.ts  store.ts  ws-client.ts
apps/crabitat-console/src/styles/: global.css
crates/crabitat-chief/: Cargo.toml
crates/crabitat-chief/src/: main.rs
crates/crabitat-control-plane/: Cargo.toml
crates/crabitat-control-plane/src/: db.rs  error.rs  github.rs  lib.rs  main.rs  mission_service.rs  poller.rs  routes.rs  scheduler.rs  types.rs  workflow_registry.rs  workflows.rs
crates/crabitat-control-plane/src/db/: issues.rs  missions.rs  mod.rs  repos.rs  settings.rs  tasks.rs  workflows.rs
crates/crabitat-control-plane/src/db/missions/: missions_test.rs
crates/crabitat-control-plane/src/db/settings/: settings_test.rs
crates/crabitat-control-plane/src/db/tasks/: tasks_test.rs
crates/crabitat-control-plane/src/github/: github_test.rs
crates/crabitat-control-plane/src/handlers/: crabs.rs  fs.rs  github.rs  issues.rs  missions.rs  mod.rs  repos.rs  runs.rs  settings.rs  status.rs  system.rs  tasks.rs  workflows.rs
crates/crabitat-control-plane/src/models/: issues.rs  missions.rs  mod.rs  repos.rs  settings.rs  system.rs  tasks.rs  workflows.rs
crates/crabitat-control-plane/tests/: dag_execution.rs  db_missions.rs  db_repos.rs  db_settings.rs  db_tasks.rs  db_workflows.rs  full_flow.rs  github.rs  handlers_issues.rs  handlers_missions.rs  handlers_repos.rs
crates/crabitat-core/: Cargo.toml
crates/crabitat-core/src/: lib.rs
crates/crabitat-crab/: Cargo.toml
crates/crabitat-crab/src/: crab_prompt.md  main.rs
crates/crabitat-protocol/: Cargo.toml
crates/crabitat-protocol/src/: lib.rs
docs/: architecture-proposal.md  example-two-agents.md  flowchart-comparison.md  onboarding-prompt.md  prd-v2-implementation-gaps.md  prd.md  workflow-engine.md
docs/prds/: prd-coding-conductor-2025-09-27.md  prd-crabitat-console-v1-2026-02-28.md  prd-crabitat-v1-2026-02-28.md  prd-crabitat-v2.md  prd-workflow-engine.md
docs/prompts/agents/: rust_backend_dev.md  technical_project_manager.md
examples/: project.toml
prds/: prd-crabitat-console-v1-2026-02-28.md
scripts/: onboard-crab.sh  spawn-crab.sh
src/: agent.rs  config.rs  eid.rs  error.rs  main.rs  model.rs  orchestrator.rs  project.rs  task.rs  tool.rs
