[package]
name = "crabitat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base36 = "0.0.1"
chrono = { version = "0.4", features = ["serde"] }

env_logger = "0.10"
log = { version = "0.4", features = ["std", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
