[workspace]
resolver = "2"
members = [
  "crates/crabitat-core",
  "crates/crabitat-protocol",
  "crates/crabitat-control-plane",
  "crates/crabitat-chief",
  "crates/crabitat-crab",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Crabitat Team"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
