[workspace]
resolver = "2"
members = [
  "crates/crabitat-core",
  "crates/crabitat-protocol",
  "crates/crabitat-control-plane",
  "crates/crabitat-chief",
  "crates/crabitat-crab",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Crabitat Team"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "process", "time", "io-util"] }
toml = "0.8"
tokio-tungstenite = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
