[package]
name = "crabitat-chief"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crabitat-core = { path = "../crabitat-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
